data/derived/comb/progs/unify/prog5194.ml.out
Characters 93-113:
  | l   -> List.map(f, sepConcat ";" l);;
                   ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'd
